<resources>
    <string name="app_name">环境卫士 - 管理员</string>
    <string name="用户名">用户名</string>
    <string name="密码">密码</string>
    <string name="登录">登录</string>
    <string name="没有检测到网络连接">没有检测到网络连接</string>
    <string name="重试">重试</string>
    <string name="密码或用户名错误">密码或用户名错误</string>
    <string name="清除密码并重试">清除密码并重试</string>
    <string name="不能为空">不能为空</string>
    <string name="未知登录错误">未知登录错误</string>
    <string name="自动登录">自动登录</string>
    <string name="记住密码">记住密码</string>
    <string name="再按一次返回键退出">再按一次返回键退出</string>
    <string name="环境卫士垃圾箱管理_title">环境卫士 - 垃圾箱管理</string>
    <string name="获取垃圾桶列表失败">获取垃圾桶列表失败</string>
    <string name="添加垃圾桶">添加垃圾桶</string>
    <string name="容量">容量</string>
    <string name="位置">经*纬</string>
    <string name="描述">描述</string>
    <string name="位置设置">位置设置</string>
    <string name="经度">经度</string>
    <string name="纬度">纬度</string>
    <string name="度">度</string>
    <string name="百分号">%</string>
    <string name="状态">状态</string>
    <string name="已占用容量">已占用容量</string>
    <string name="提交">提交</string>
    <string name="取消">取消</string>
    <string name="刷新垃圾桶信息失败">刷新垃圾桶信息失败</string>
    <string name="发送通知邮件">发送通知邮件</string>
    <string name="登录时使用生物验证">登录时使用生物验证</string>
</resources>