<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:title="@string/环境卫士垃圾箱管理_title"
            app:titleTextColor="@color/blue_primary_text"
            app:menu="@menu/menu_top_appbar_main"
            style="@style/Widget.MaterialComponents.Toolbar.Primary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/binRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:alpha="0"
        android:id="@+id/addBinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addBinLongitudeTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/经度"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:suffixText="@string/度">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addBinLongitudeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addBinLatitudeTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/纬度"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addBinLongitudeTextField"
                    app:suffixText="@string/度">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addBinLatitudeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/addBinButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/添加垃圾桶"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/cancelAddBinButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/取消"
                    android:textColor="@color/black_a75"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/addBinButton" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/mailFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/发送通知邮件"
        android:text="@string/发送通知邮件"
        android:textColor="@color/white"
        app:icon="@drawable/ic_baseline_mail_24"
        app:iconTint="@color/white"/>

    <FrameLayout
        android:id="@+id/binDetailBottomSheet"
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        android:background="@color/blue_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout1"
            android:layout_marginTop="?attr/actionBarSize"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detailTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.amap.api.maps2d.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailTitleText" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_location_on_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/longitudeTextField"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/经度"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="10dp"
                app:suffixText="@string/度"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/longitudeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/latitudeTextField"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/纬度"
                app:suffixText="@string/度"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginStart="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/imageView2" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/latitudeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5.5dp"
                android:text="×"
                android:textColor="@color/black"
                android:textSize="22dp"
                app:layout_constraintBottom_toBottomOf="@+id/longitudeTextField"
                app:layout_constraintStart_toEndOf="@+id/longitudeTextField"
                app:layout_constraintTop_toTopOf="@+id/longitudeTextField" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_baseline_insert_chart_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/longitudeTextField" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/statusTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/状态"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3">

                <AutoCompleteTextView
                    android:id="@+id/statusAutoText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_baseline_opacity_24"
                app:layout_constraintStart_toEndOf="@+id/statusTextField"
                app:layout_constraintTop_toBottomOf="@+id/longitudeTextField" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/levelTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/已占用容量"
                app:layout_constraintBottom_toBottomOf="@+id/statusTextField"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/statusTextField"
                app:suffixText="@string/百分号">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/levelEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_baseline_description_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusTextField" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="322.5dp"
                android:layout_height="280dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:hint="@string/描述"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/statusTextField"
                app:layout_goneMarginStart="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/commitButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/提交"
                android:textStyle="bold"
                android:layout_margin="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/取消"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"
                android:layout_marginEnd="30dp"
                app:layout_constraintEnd_toStartOf="@id/commitButton"
                app:layout_constraintBottom_toBottomOf="@id/commitButton"
                app:layout_constraintTop_toTopOf="@id/commitButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>