<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/loginView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity"
    app:layoutDescription="@xml/activity_login_motion_scene">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_marginTop="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pic_env_guard_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="管理员端"
            android:textSize="18dp"
            android:layout_marginTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/用户名"
            app:endIconMode="clear_text"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="42dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/密码"
            app:endIconMode="password_toggle"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="100dp"
            android:layout_height="58sp"
            android:layout_marginTop="35dp"
            android:text="@string/登录"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/passwordTextField"
            app:layout_constraintStart_toStartOf="@+id/passwordTextField"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/loadingIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/rememberCheckBox"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5sp"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <TextView
            android:id="@+id/rememberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:clickable="true"
            android:text="@string/记住密码"
            android:textColor="@color/black_a75"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/rememberCheckBox"
            app:layout_constraintStart_toEndOf="@+id/rememberCheckBox"
            app:layout_constraintTop_toTopOf="@+id/rememberCheckBox"
            app:layout_constraintVertical_bias="1.0" />

        <CheckBox
            android:id="@+id/bioCheckCheckBox"
            android:clickable="false"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="@+id/passwordTextField"
            app:layout_constraintTop_toBottomOf="@+id/rememberCheckBox" />

        <TextView
            android:id="@+id/bioCheckText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:clickable="true"
            android:text="@string/登录时使用生物验证"
            android:textColor="@color/black_a75"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/bioCheckCheckBox"
            app:layout_constraintStart_toEndOf="@+id/bioCheckCheckBox"
            app:layout_constraintTop_toTopOf="@+id/rememberCheckBox"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:alpha="0"
        android:id="@+id/fingerPrintMask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/black_a50">

        <ImageView
            android:id="@+id/fingerPrintHintImage"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/img_fingerprint_login"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>