<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/totalView"
    android:background="?attr/selectableItemBackground"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:clickable="true">

    <ImageView
        android:id="@+id/normalImage"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_condition_normal"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/binName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/binName" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/abnormalImage"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_condition_abnormal"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/binName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/binName" />

    <TextView
        android:id="@+id/binName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="1号垃圾桶"
        android:textColor="@color/blue_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/binIndicator"
        android:layout_width="0dp"
        android:layout_height="9dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/binName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/normalImage"
        app:layout_constraintStart_toEndOf="@+id/binName"
        app:layout_constraintTop_toTopOf="@+id/binName"
        app:layout_constraintVertical_bias="0.48000002"
        app:trackCornerRadius="3dp"
        app:trackThickness="6dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/容量"
        android:textColor="@color/blue_primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/binName" />

    <TextView
        android:id="@+id/binLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100.0%"
        android:textColor="@color/black_a75"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/positionText"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/位置"
        android:textColor="@color/blue_primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/positionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10.234 * 2.333"
        android:textColor="@color/black_a75"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/描述"
        android:textColor="@color/blue_primary_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="位于厕所东北角，margin = 10cm"
        android:textColor="@color/black_a75"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/positionText"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>